trunk/Archive2/a3/1e201e879b9943/output
main.cpp:19:35: error: could not convert template argument 'quasi_closure{}' to 'void (*)()'
 using C = carrier<quasi_closure {}> {};
                                   ^
main.cpp:19:39: warning: extra ';' [-Wpedantic]
 using C = carrier<quasi_closure {}> {};
                                       ^
